# tensorflow-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: external_library.cmake  fetch_tf.cmake
